examples/test/testpolicy1742.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1742
  namespace: namespace206
spec:
  podSelector:
    matchLabels:
      key31: value5
      key40: value10
      key36: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value46
          key7: value37
      podSelector:
        matchLabels:
          key4: value38
          key44: value40
